Arrow drawable can be specified in xml or programmatically, plus the arrow can be shown/hidden programmatically

--- a/src/main/res/values/attrs.xml
+++ b/src/main/res/values/attrs.xml
@@ -3,6 +3,7 @@
     <declare-styleable name="NiceSpinner">
         <attr name="arrowTint" format="color" />
         <attr name="hideArrow" format="boolean" />
+        <attr name="arrowDrawable" format="reference|color"/>
         <attr name="backgroundSelector" format="integer"/>
         <attr name="textTint" format="color"/>
     </declare-styleable>
