Allow to specify a bottom padding for the drop-down list

--- a/src/main/res/values/attrs.xml
+++ b/src/main/res/values/attrs.xml
@@ -4,6 +4,7 @@
         <attr name="arrowTint" format="color" />
         <attr name="hideArrow" format="boolean" />
         <attr name="arrowDrawable" format="reference|color"/>
+        <attr name="dropDownListPaddingBottom" format="dimension"/>
         <attr name="backgroundSelector" format="integer"/>
         <attr name="textTint" format="color"/>
     </declare-styleable>
