--- a/src/main/res/layout/spinner_list_item.xml
+++ b/src/main/res/layout/spinner_list_item.xml
@@ -2,7 +2,7 @@
 
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/tv_tinted_spinner"
+    android:id="@+id/text_view_spinner"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
