--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,12 +29,30 @@
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
         app:arrowTint="@color/colorPrimary"
-        app:textTint="@color/colorPrimary"
         app:backgroundSelector="@drawable/background_selector"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/nice_spinner"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.0"
+        app:textTint="@color/colorPrimary" />
+
+    <org.angmarch.views.NiceSpinner
+        android:id="@+id/bottom_nice_spinner"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="8dp"
+        app:arrowTint="@color/colorPrimary"
+        app:backgroundSelector="@drawable/background_selector"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tinted_nice_spinner"
+        app:layout_constraintVertical_bias="1.0"
+        app:textTint="@color/colorPrimary" />
 
 </android.support.constraint.ConstraintLayout>
