Add an option to change the popup default text horizontal alignment

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,6 +46,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginBottom="8dp"
+        app:popupTextAlignment="end"
         app:arrowTint="@color/colorPrimary"
         app:backgroundSelector="@drawable/background_selector"
         app:layout_constraintBottom_toBottomOf="parent"
