--- a/app/src/main/res/drawable/background_selector.xml
+++ b/app/src/main/res/drawable/background_selector.xml
@@ -1,15 +1,5 @@
-<ripple xmlns:android="http://schemas.android.com/apk/res/android" android:color="@color/colorPrimaryDark">
-<item>
-    <selector>
-        <item
-            android:drawable="@android:color/white"
-            android:state_checked="false"/>
-        <item
-            android:drawable="@color/colorPrimary"
-            android:state_checked="true" />
-        <item
-            android:drawable="@color/colorPrimaryDark" />
-
-    </selector>
-</item>
-</ripple>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:drawable="@android:color/white" android:state_checked="false" />
+    <item android:drawable="@color/colorPrimary" android:state_checked="true" />
+    <item android:drawable="@color/colorPrimaryDark" />
+</selector>
