--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,17 +7,32 @@
     tools:context=".MainActivity">
 
     <org.angmarch.views.NiceSpinner
+        android:id="@+id/entries_spinner"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        app:entries="@array/courses"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <org.angmarch.views.NiceSpinner
         android:id="@+id/nice_spinner"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:layout_marginRight="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/entries_spinner"
+        app:layout_constraintVertical_bias="0.006" />
 
     <org.angmarch.views.NiceSpinner
         android:id="@+id/tinted_nice_spinner"
@@ -46,7 +61,6 @@
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginBottom="8dp"
-        app:popupTextAlignment="end"
         app:arrowTint="@color/colorPrimary"
         app:backgroundSelector="@drawable/background_selector"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -54,6 +68,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tinted_nice_spinner"
         app:layout_constraintVertical_bias="1.0"
+        app:popupTextAlignment="end"
         app:textTint="@color/colorPrimary" />
 
 </android.support.constraint.ConstraintLayout>
